test/test-cases/negative/lexical_errors.pas

Program lexical_errors(input, output);

// 无效字符
~
// 引号未匹配
'
Begin
End.
